--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             <a><i class="fa-solid fa-user-tie"></i>Funcionários</a>
           </li>
           <li>
-            <a routerLink="/users"
+            <a href="/users"
               ><i class="fa-solid fa-user-tie"></i>Usuários</a
             >
           </li>
